# data/tracks

pkgdatadir= $(datadir)/games/$(PACKAGE)/data/tracks
nobase_dist_pkgdata_DATA = $(shell find $(srcdir) -name "*.jpg" -print0)           \
                           $(shell find $(srcdir) -name "*.JPG" -print0)           \
                           $(shell find $(srcdir) -name "*.png" -print0)           \
                           $(shell find $(srcdir) -name "*.b3d" -print0)           \
                           $(shell find $(srcdir) -name "License.txt" -print0)     \
                           $(shell find $(srcdir) -name "*.xml" -print0)           \
                           $(shell find $(srcdir) -name "*.challenge" -print0)     \
                           $(shell find $(srcdir) -name "Music_license.rtf" -print0) \
                           $(shell find $(srcdir) -name "*.music" -print0)         \
                           $(shell find $(srcdir) -name "*.ogg" -print0)

